--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="portal-modal-nav"></div>
+    <div id="portal-alert"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
