--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="root"></div>
     <div id="portal-modal-nav"></div>
     <div id="portal-alert"></div>
+    <div id="portal"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
