added splash screen intro

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="root"></div>
     <div id="portal-modal-nav"></div>
     <div id="portal-alert"></div>
-    <div id="portal"></div>
+    <div id="portal-splash-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
