optimization of loading prage

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
+      crossorigin
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@100;300;500;700;900&family=Roboto+Mono:wght@200&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
+      crossorigin
     />
     <title>LIPNA</title>
   </head>
@@ -21,3 +25,7 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- rel="preload" as="font" crossorigin -->
+
+<!-- rel="stylesheet" -->
