cleaned up after mess with build

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin
     />
     <title>LIPNA</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
@@ -25,7 +26,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-<!-- rel="preload" as="font" crossorigin -->
-
-<!-- rel="stylesheet" -->
