--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin
     />
     <title>LIPNA</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
