lipna mobile version almost done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="portal-modal-nav"></div>
     <div id="portal-alert"></div>
     <div id="portal-splash-screen"></div>
+    <div id="portal-loading"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
