--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="portal-alert"></div>
     <div id="portal-splash-screen"></div>
     <div id="portal-loading"></div>
+    <div id="swiper"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
